--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.0.1",
     "com.unity.barracuda": "1.0.1",
     "com.unity.cinemachine": "2.6.4",
     "com.unity.collab-proxy": "1.2.16",
